src/snapshots/afrotd__parser__tests__rule_9.1.14.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 9
  - 1
  - 14
title: Kontakt gegen den Snapper
text: "Befindet sich ein Team in einer Scrimmage Kick Formation und der Snapper befindet sich nicht am Ende der Scrimmage Line, darf ein Defense Spieler keinen Kontakt mit dem Snapper herstellen, bis eine Sekunde nach dem Snap vergangen ist (A.R. 9.1.14.I bis 9.1.14.III)."
interpretations: []
