src/snapshots/afrotd__parser__tests__rule_9.1.15.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 9
  - 1
  - 15
title: Horse Collar Tackle
text: "Allen Spielern ist es verboten, die Innenseite des Rücken- oder Seitenteils des Schulterschutzes oder des Trikots oder den Bereich des Namensschildes zu ergreifen und den Ballträger abrupt nach unten zu ziehen. Das gilt auch für den Ballträger, inklusive eines möglichen Passers, der sich innerhalb der Tackle Box befindet."
interpretations: []
