src/snapshots/afrotd__parser__tests__rule_9.1.16.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 9
  - 1
  - 16
title: „Roughing“ oder „Running into“ Kicker oder Holder
text: "\ta) Wenn es offensichtlich ist, dass ein Scrimmage Kick durchgeführt werden soll, darf kein Gegner in einen Kicker oder den Holder eines Place Kicks hineinlaufen (Running into) oder diese mit Forcible Contact (Roughing) angreifen (A.R. 9.1.16.I, 9.1.16.III und 9.1.16.VI).\n\t\t1. Roughing ist ein persönliches Live Ball Foul, das den Kicker oder Holder gefährdet.\n\t\t2. Running into Kicker oder Holder ist ein Live Ball Foul, das sich ereignet, wenn der Kicker oder der Holder von ihren Kick- bzw. Ballhalte-Positionen verdrängt wurden, das Foul aber kein Roughing ist (A.R. 9.1.16.II).\n\t\t3. Geringfügiger Kontakt mit dem Kicker oder dem Holder ist kein Foul.\n\t\t4. Der Schutz des Kickers durch diese Regel endet\n\t\t\ta. wenn er eine angemessene Zeit hatte, seine Balance wieder zu erlangen (A.R. 9.1.16.IV) oder\n\t\t\tb. sobald er den Ball außerhalb der Tackle Box besitzt oder aus der Tackle Box (Regel 2.34.1) herausgetragen hat, bevor er den Ball kickt oder\n\t\t\tc. wenn er aus einer Scrimmage Kick Formation den Ball mehr als fünf Meter hinter der anfänglichen Position beim Snap trägt oder besitzt.\n\t\t5. Wenn sich der Kontakt eines Defense Spielers mit dem Kicker oder Holder durch einen gegnerischen Block (legal oder illegal) ereignet, der durch ein Mitglied des Kicking Teams gegen einen Kicker oder Holder geblockt wird, liegt kein Foul für Running into oder Roughing gegen den Kicker oder den Holder vor.\n\t\t6. Ein Spieler, der den Kick berührt hat und einen Kontakt gegen den Kicker oder den Holder herstellt, begeht kein Foul.\n\t\t7. Ein Spieler, ausgenommen der, der einen Scrimmage Kick abblockt, begeht ein Foul, wenn er in einen Kicker oder Holder hineinläuft oder diesen übermäßig hart angreift.\n\t\t8. Im Zweifel, ob es sich um ein Running into- oder ein RoughingFoul handelt, ist es Roughing. Strafe: Roughing oder jedes andere persönliche Foul gegen den Kicker, während dieser den Kick durchführt oder der Ball gekickt wurde oder Roughing gegen den Holder: 15 Meter vom Previous Spot und automatisch First Down, soweit das nicht in Konflikt zu anderen Regeln steht [S38 und S30]. Running into Kicker oder Holder: 5 Meter vom Previous Spot [S30].\n\tb) Ein Kicker oder Holder, der vortäuscht, man hätte ihn gefoult (Running oder Roughing) begeht ein Unsportliches Verhalten Foul (A.R. 9.1.16.V). Strafe: 15 Meter vom Previous Spot oder, wenn ein Scrimmage Kick die neutrale Zone überquert hat, von dem Punkt, an dem der anschließende Dead Ball zu Team B gehört [S27].\n\tc) Der Kicker eines Free Kicks darf nicht geblockt werden, bis er sich 5 Meter jenseits seiner Restraining Line befindet oder der Kick einen Spieler, einen Schiedsrichter oder den Boden berührt hat. Strafe: 15 Meter vom Previous Spot [S40]."
interpretations: []
