src/snapshots/afrotd__parser__tests__rule_9.1.17.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 9
  - 1
  - 17
title: Weiterführende Spielteilnahme ohne Helm
text: "Ein Spieler, der seinen Helm vollständig verloren hat, darf sich, außer an der unmittelbar mit dem Helmverlust verbundenen Aktion, während dieses Downs nicht am weiteren Spielgeschehen beteiligen, egal, ob er seinen Helm wieder aufsetzt oder nicht (A.R. 9.1.17.I)."
interpretations: []
