src/snapshots/afrotd__parser__tests__rule_9.1.2.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 9
  - 1
  - 2
title: Schlagen und Tripping
text: "\ta) Keine Person, die den Regeln unterliegt, darf einen Gegner mit dem Knie stoßen oder mit ausgestrecktem Unterarm, Ellenbogen, verschränkten Händen, der Handfläche, der Faust, dem Handballen, dem Handrücken oder der Handkante gegen den Helm (inklusive Helmgitter), den Hals, das Gesicht oder ein anderes Körperteil schlagen oder dem Gegner in die Augen stechen (A.R. 9.1.2.I).\n\tb) Keine Person, die den Regeln unterliegt, darf einen Gegner mit dem Fuß oder einem Körperteil unterhalb des Knies treten.\n\tc) Tripping ist verboten. Tripping ist der absichtliche Einsatz des eigenen Schienbeins oder des Fußes, um einen Gegner unterhalb dessen Knie zu behindern (Regel 2.28.1)."
interpretations: []
